# kyndryl-factbase

./: .gitignore  Kyndryl_Hardware_Data_Collection.xlsx  Makefile  main.py  pyproject.toml  readme.md
app/: scrape_dell_pcf.py
app/db/: Kyndryl_Hardware_Data_Collection.xlsx  generate_excel_schema.py  models.py  ~$Kyndryl_Hardware_Data_Collection.xlsx
data/: deliverables.md
data/best_practices/: kyndryl_goal_scope_definition.md
data/best_practices/analysis/: comparison_dimensions.md  mapping_deliverables.md  synthesis.md
data/best_practices/summaries/: dell.md  hpe.md  nvidia.md  samsung-certificate.md  samsung-laptop.md  seagate.md  western-digital.md
data/ecoinvent/: README.md  generate_import_script.py  openlca_ecoinvent_import.py  openlca_import.py  openlca_import.ready.py
docs/: POST_UPDATE.md  update-models-and-document.md  update-models-prompt.md
