[project]
name = "kyndryl-factbase"
version = "0.1.0"
description = "Streamlit app for software-based compiling of hardware emissions and efficiency data."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "polars>=1.37.1",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.53.1",
    "xlsxwriter>=3.2.9",
]
